# UltimateKaraokePlayer

./: MOTORS_MATRIX.md  PROJECT_PLAN.md  README.md  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
src/: App.tsx  index.css
src-tauri/: .gitignore  Cargo.toml  remote_client.html  tauri.conf.json
src-tauri/src/: bass_engine.rs  cdg_parser.rs  legacy_engine.rs  library.rs  main.rs  remote.rs  star3_engine.rs  synth_engine.rs  tracker_engine.rs  ultrastar_engine.rs  video_engine.rs
src/components/: CdgCanvas.tsx  LegacyDisplay.tsx  SynthDisplay.tsx  TrackerDisplay.tsx  UltrastarDisplay.tsx  VideoDisplay.tsx
src/hooks/: usePitchDetector.ts
