[package]
name = "ultimate-karaoke-player"
version = "0.1.0"
edition = "2021"

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.5", features = ["api-all"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.35", features = ["full"] }
axum = "0.7"
tower-http = { version = "0.5", features = ["cors", "fs"] }
rodio = "0.17"
midir = "0.9"
# fluid-synth = "2.1" // pacote não existe com este nome, e será implementado na Fase do Synth Engine
sqlx = { version = "0.7", features = ["runtime-tokio", "sqlite"] }
futures-util = "0.3"
tokio-tungstenite = "0.21"
log = "0.4"
env_logger = "0.10"
